--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="container">
                 <h2 class="section-title">Afinal, o que é o CR?</h2>
                 <p class="section-subtitle">Entenda de uma vez por todas o que é o documento que abre as portas do universo armamentista para você.</p>
-                <p>O <strong>Certificado de Registro (CR)</strong> é o documento oficial, emitido pelo Exército Brasileiro, que autoriza o cidadão a se tornar um <strong>Caçador, Atirador Desportivo ou Colecionador (CAC)</strong>. Ele é a sua identidade no mundo do tiro legalizado, permitindo a compra, o transporte (porte de trânsito) e o uso de armas de fogo dentro das normas da sua categoria.</p>
+                <p>O <strong>Certificado de Registro (CR)</strong> é o documento oficial, agora emitido pela <strong>Polícia Federal</strong>, que autoriza o cidadão a se tornar um <strong>Caçador, Atirador Desportivo ou Colecionador (CAC)</strong>. Ele é a sua identidade no mundo do tiro legalizado, permitindo a compra, o transporte (porte de trânsito) e o uso de armas de fogo dentro das normas da sua categoria.</p>
                 <p>Com o CR, você deixa de ser um espectador e passa a ser um praticante ativo, com todos os direitos e responsabilidades que a lei garante. É a forma mais segura e correta de exercer seu direito e sua paixão.</p>
             </div>
         </section>
@@ -193,7 +193,7 @@
                 <div class="myths-grid">
                     <div class="myth-card"> <i class="fas fa-user-slash"></i> <h3>"Preciso ser militar ou policial"</h3> <p><strong>MITO.</strong> Ser CAC é um direito de todo cidadão brasileiro qualificado, sem necessidade de vínculo com forças de segurança.</p> </div>
                     <div class="myth-card"> <i class="fas fa-file-invoice-dollar"></i> <h3>"É muito caro e complicado"</h3> <p><strong>MITO.</strong> Com nossa assessoria, o processo se torna simples, o investimento é acessível e nós cuidamos de toda a burocracia.</p> </div>
-                    <div class="myth-card"> <i class="fas fa-shield-halved"></i> <h3>"É perigoso ou ilegal"</h3> <p><strong>MITO.</strong> O processo é 100% legal, regulamentado pelo Exército e focado na posse e uso responsável de armas de fogo.</p> </div>
+                    <div class="myth-card"> <i class="fas fa-shield-halved"></i> <h3>"É perigoso ou ilegal"</h3> <p><strong>MITO.</strong> O processo é 100% legal, regulamentado e focado na posse e uso responsável de armas de fogo.</p> </div>
                 </div>
             </div>
         </section>
@@ -205,7 +205,7 @@
                 <div class="req-invest-grid">
                     <div class="requirements-list">
                         <h3><i class="fas fa-list-check"></i> Pré-Requisitos Básicos</h3>
-                        <div class="req-item"><i class="fas fa-check"></i> Ser maior de 18 anos (consulte condições).</div>
+                        <div class="req-item"><i class="fas fa-check"></i> Ter no mínimo 25 anos de idade.</div>
                         <div class="req-item"><i class="fas fa-check"></i> Comprovar residência fixa.</div>
                         <div class="req-item"><i class="fas fa-check"></i> Comprovar ocupação lícita (trabalho).</div>
                         <div class="req-item"><i class="fas fa-check"></i> Não possuir antecedentes criminais.</div>
@@ -220,7 +220,7 @@
                         <p><strong>O que está incluso:</strong></p>
                         <ul>
                             <li><i class="fas fa-check"></i> Assessoria completa do início ao fim.</li>
-                            <li><i class="fas fa-check"></i> Todas as taxas do Exército.</li>
+                            <li><i class="fas fa-check"></i> Todas as taxas da Polícia Federal.</li>
                             <li><i class="fas fa-check"></i> Orientação para laudos e testes.</li>
                             <li><i class="fas fa-check"></i> Suporte via WhatsApp.</li>
                         </ul>
