--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             align-items: center;
             width: 100%;
         }
-        .logo-container { /* Contêiner para a logo com fundo preto */
+        .logo-container {
             background-color: #000;
             padding: 5px 10px;
             border-radius: 5px;
-            display: flex; /* Garante alinhamento correto da imagem */
+            display: flex;
             align-items: center;
         }
         .logo { max-height: 50px; }
@@ -159,7 +159,7 @@
                     <li><a href="#requirements" class="nav-link">Requisitos</a></li>
                     <li><a href="#quiz" class="nav-link">Quiz</a></li>
                     <li><a href="#benefits" class="nav-link">Benefícios</a></li>
-                    <li><a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Gostaria%20de%20iniciar%20minha%20assessoria%20para%20o%20CAC." target="_blank" class="nav-cta">WhatsApp</a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Vim%20pelo%20site%20e%20gostaria%20de%20mais%20informações." target="_blank" class="nav-cta">WhatsApp</a></li>
                 </ul>
             </nav>
             <button class="menu-toggle" aria-label="Abrir menu">
@@ -262,10 +262,10 @@
                             <button class="quiz-option" data-profile="defesa">D. Armas práticas e confiáveis para porte e defesa.</button>
                         </div>
                     </div>
-                    <div id="result-atirador" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Atirador Desportivo</h3> <p>Sua missão é a precisão e a performance. Você valoriza a técnica, a disciplina e a adrenalina do esporte. A Comandos Consultoria te dará o suporte completo para obter seu CR e competir com os melhores equipamentos.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Fiz%20o%20quiz%20no%20site%20e%20meu%20perfil%20é%20de%20Atirador%20Desportivo.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Tiro Desportivo</a> </div>
-                    <div id="result-cacador" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Caçador</h3> <p>Sua missão é a atividade ao ar livre, o respeito à natureza e a prática da caça de forma legal e responsável. A Comandos Consultoria te orienta sobre as normas e os melhores equipamentos para a sua jornada.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Fiz%20o%20quiz%20no%20site%20e%20meu%20perfil%20é%20de%20Caçador.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Caça</a> </div>
-                    <div id="result-colecionador" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Colecionador</h3> <p>Sua missão é preservar a história e a arte da armaria. Você valoriza peças únicas, seu design e seu legado. A Comandos Consultoria te ajuda a construir seu acervo de forma 100% legal e segura.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Fiz%20o%20quiz%20no%20site%20e%20meu%20perfil%20é%20de%20Colecionador.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Colecionismo</a> </div>
-                    <div id="result-defesa" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Foco em Defesa</h3> <p>Sua missão principal é a segurança. Você busca o direito de proteger sua família e sua propriedade com responsabilidade. O caminho ideal começa como Atirador, para garantir a proficiência. A Comandos Consultoria é sua parceira nessa jornada.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Fiz%20o%20quiz%20no%20site%20e%20meu%20perfil%20é%20focado%20em%20Defesa.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Defesa</a> </div>
+                    <div id="result-atirador" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Atirador Desportivo</h3> <p>Sua missão é a precisão e a performance. Você valoriza a técnica, a disciplina e a adrenalina do esporte. A Comandos Consultoria te dará o suporte completo para obter seu CR e competir com os melhores equipamentos.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Vim%20pelo%20site%20e%20meu%20perfil%20é%20de%20Atirador%20Desportivo.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Tiro Desportivo</a> </div>
+                    <div id="result-cacador" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Caçador</h3> <p>Sua missão é a atividade ao ar livre, o respeito à natureza e a prática da caça de forma legal e responsável. A Comandos Consultoria te orienta sobre as normas e os melhores equipamentos para a sua jornada.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Vim%20pelo%20site%20e%20meu%20perfil%20é%20de%20Caçador.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Caça</a> </div>
+                    <div id="result-colecionador" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Colecionador</h3> <p>Sua missão é preservar a história e a arte da armaria. Você valoriza peças únicas, seu design e seu legado. A Comandos Consultoria te ajuda a construir seu acervo de forma 100% legal e segura.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Vim%20pelo%20site%20e%20meu%20perfil%20é%20de%20Colecionador.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Colecionismo</a> </div>
+                    <div id="result-defesa" class="quiz-result"> <h2>Seu Perfil Ideal é:</h2> <h3>Foco em Defesa</h3> <p>Sua missão principal é a segurança. Você busca o direito de proteger sua família e sua propriedade com responsabilidade. O caminho ideal começa como Atirador, para garantir a proficiência. A Comandos Consultoria é sua parceira nessa jornada.</p> <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Vim%20pelo%20site%20e%20meu%20perfil%20é%20focado%20em%20Defesa.%20Gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Falar com um Especialista em Defesa</a> </div>
                 </div>
             </div>
         </section>
@@ -301,7 +301,7 @@
             <div class="container">
                 <h2 class="section-title">Pronto para começar?</h2>
                 <p class="section-subtitle">A segurança e a liberdade que você busca estão a uma conversa de distância. Fale com nossa equipe agora mesmo e tire todas as suas dúvidas sem compromisso.</p>
-                <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Gostaria%20de%20iniciar%20minha%20assessoria%20para%20o%20CAC." target="_blank" class="cta-button">Chamar no WhatsApp</a>
+                <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Vim%20pelo%20site%20e%20gostaria%20de%20mais%20informações." target="_blank" class="cta-button">Chamar no WhatsApp</a>
             </div>
         </section>
     </main>
@@ -311,7 +311,7 @@
             <p>&copy; 2025 Comandos Consultoria - Todos os direitos reservados.</p>
             <div class="social-icons">
                 <a href="https://www.instagram.com/comandos.consultoria" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://api.whatsapp.com/send?phone=5565996146325" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5565996146325&text=Olá!%20Vim%20pelo%20site%20e%20gostaria%20de%20mais%20informações." target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </footer>
